[tool.poetry]
name = "rxgemini"
version = "0.1.0"
description = "Python unit test automation toolkit."
authors = ["AJ-Gonzalez <aj.gonzalez.dev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
