[tool.poetry]
name = "rxgemini"
version = "0.1.1"
description = "Python unit test automation toolkit."
authors = ["AJ-Gonzalez <aj.gonzalez.dev@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
rxgemini = "rxgemini.main:app"

[tool.poetry.dependencies]
python = "^3.7.4"
typer = {extras = ["all"], version = "^0.9.0"}
pyyaml = "^6.0.1"
coloredlogs = "^15.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
